treewide: bump rules_oci to v2.0.0
Change-Id: Idbeb3a3b7645c5b6f774eb43d218ca0bc79dccc1
Reviewed-on: https://review.monogon.dev/c/monogon/+/3474
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/kubernetes/pause/BUILD.bazel
+++ b/metropolis/node/kubernetes/pause/BUILD.bazel
@@ -25,7 +25,7 @@ pkg_tar(
     visibility = ["//visibility:private"],
 )
 
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
 
 oci_image(
     name = "pause_image",
@@ -37,9 +37,16 @@ oci_image(
     workdir = "/",
 )
 
-oci_tarball(
-    name = "pause_tarball",
+oci_load(
+    name = "pause_load",
     image = ":pause_image",
     repo_tags = ["preseed.metropolis.internal/node/kubernetes/pause:latest"],
+    visibility = ["//visibility:private"],
+)
+
+filegroup(
+    name = "pause_tarball",
+    srcs = [":pause_load"],
+    output_group = "tarball",
     visibility = ["//metropolis/node:__pkg__"],
 )
