--- a/metropolis/node/core/curator/BUILD.bazel
+++ b/metropolis/node/core/curator/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "impl_leader_curator.go",
         "impl_leader_management.go",
         "listener.go",
+        "reconfigure.go",
         "state.go",
         "state_cluster.go",
         "state_node.go",
@@ -42,6 +43,7 @@ go_library(
         "@com_github_google_cel_go//cel:go_default_library",
         "@com_github_google_cel_go//checker/decls:go_default_library",
         "@com_github_google_cel_go//common/types:go_default_library",
+        "@com_github_google_go_cmp//cmp",
         "@com_zx2c4_golang_wireguard_wgctrl//wgtypes",
         "@io_etcd_go_etcd_api_v3//mvccpb",
         "@io_etcd_go_etcd_client_v3//:client",
@@ -51,8 +53,11 @@ go_library(
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//keepalive",
         "@org_golang_google_grpc//status",
+        "@org_golang_google_protobuf//encoding/prototext",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//testing/protocmp",
         "@org_golang_google_protobuf//types/known/durationpb",
+        "@org_golang_google_protobuf//types/known/fieldmaskpb",
         "@org_golang_google_protobuf//types/known/timestamppb",
     ],
 )
@@ -62,6 +67,7 @@ go_test(
     srcs = [
         "curator_test.go",
         "impl_leader_test.go",
+        "reconfigure_test.go",
         "state_test.go",
     ],
     embed = [":curator"],
@@ -90,6 +96,7 @@ go_test(
         "@org_golang_google_grpc//test/bufconn",
         "@org_golang_google_protobuf//proto",
         "@org_golang_google_protobuf//testing/protocmp",
+        "@org_golang_google_protobuf//types/known/fieldmaskpb",
         "@org_golang_google_protobuf//types/known/timestamppb",
         "@org_uber_go_zap//:zap",
     ],
