treewide: bump rust to 1.82.0
This also patches rules_rust to support extra_rustc_flags inside bzlmod
extensions.

Change-Id: I5da146bee580128a7ecfa6d98fa3afe482deb112
Reviewed-on: https://review.monogon.dev/c/monogon/+/3599
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -46,6 +46,7 @@ single_version_override(
         "//third_party/rules_rust:rust-uefi-platform.patch",
         "//third_party/rules_rust:rust-prost-nostd.patch",
         "//third_party/rules_rust:rust-reproducibility.patch",
+        "//third_party/rules_rust:Add-extra_rustc_flags-to-module-extension.patch",
     ],
     version = "0.53.0",
 )
