metropolis/cli/metroctl: move takeownership under cluster subcommand tree
This is in preparation for having more cluster-wide commands (same as we
keep 'node' for all node-specific commands).

Change-Id: I3fa5935e1d751261bf82a80cf61e811fa36effc9
Reviewed-on: https://review.monogon.dev/c/monogon/+/3593
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -18,6 +18,8 @@ go_library(
     name = "metroctl_lib",
     srcs = [
         "cmd_certs.go",
+        "cmd_cluster.go",
+        "cmd_cluster_takeownership.go",
         "cmd_install.go",
         "cmd_install_ssh.go",
         "cmd_install_usb.go",
@@ -28,7 +30,6 @@ go_library(
         "cmd_node_logs.go",
         "cmd_node_metrics.go",
         "cmd_node_set.go",
-        "cmd_takeownership.go",
         "main.go",
         "rpc.go",
         "table_node.go",
