--- a/metropolis/cli/metroctl/BUILD.bazel
+++ b/metropolis/cli/metroctl/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
     srcs = [
         "cmd_certs.go",
         "cmd_cluster.go",
+        "cmd_cluster_configure.go",
         "cmd_cluster_takeownership.go",
         "cmd_install.go",
         "cmd_install_ssh.go",
@@ -60,6 +61,7 @@ go_library(
         "@io_k8s_client_go//pkg/apis/clientauthentication/v1:clientauthentication",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_protobuf//proto",
+        "@org_golang_google_protobuf//types/known/fieldmaskpb",
         "@org_golang_x_crypto//ssh",
         "@org_golang_x_crypto//ssh/agent",
         "@org_golang_x_crypto//ssh/terminal",
