--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -77,7 +77,10 @@ bazel_dep(name = "rules_cc", version = "0.0.10")
 bazel_dep(name = "grpc", version = "1.66.0")
 bazel_dep(name = "rules_proto", version = "6.0.2")
 bazel_dep(name = "toolchains_protoc", version = "0.3.3")
-bazel_dep(name = "protobuf", version = "28.2")
+
+# Currently supported version are listed here:
+# https://protobuf.dev/support/version-support/
+bazel_dep(name = "protobuf", version = "28.3")
 
 # Load musl toolchain Metropolis sysroot tarball into external repository.
 musl_sysroot_rule = use_repo_rule("//build/toolchain/musl-host-gcc:sysroot_repository.bzl", "musl_sysroot_rule")
