--- a/metropolis/node/kubernetes/BUILD.bazel
+++ b/metropolis/node/kubernetes/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "kubernetes",
@@ -7,6 +7,7 @@ go_library(
         "apiserver.go",
         "controller-manager.go",
         "csi.go",
+        "feature_gates.go",
         "kubelet.go",
         "labelmaker.go",
         "provisioner.go",
@@ -62,6 +63,7 @@ go_library(
         "@io_k8s_client_go//tools/record",
         "@io_k8s_client_go//tools/reference",
         "@io_k8s_client_go//util/workqueue",
+        "@io_k8s_component_base//featuregate",
         "@io_k8s_kubelet//config/v1beta1",
         "@io_k8s_kubelet//pkg/apis/pluginregistration/v1:pluginregistration",
         "@io_k8s_kubernetes//plugin/pkg/admission/security/podsecurity",
@@ -71,5 +73,15 @@ go_library(
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//types/known/wrapperspb",
         "@org_golang_x_sys//unix",
+    ],
+)
+
+go_test(
+    name = "kubernetes_test",
+    srcs = ["feature_gates_test.go"],
+    embed = [":kubernetes"],
+    deps = [
+        "@io_k8s_apiserver//pkg/util/feature",
+        "@io_k8s_component_base//featuregate",
     ],
 )
