treewide: replace bool-to-boolptr helpers with k8s.io/utils/ptr.To
Change-Id: I90419ddfe087291f41f7f2f3589263e56c15470a
Reviewed-on: https://review.monogon.dev/c/monogon/+/3675
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/kubernetes/BUILD.bazel
+++ b/metropolis/node/kubernetes/BUILD.bazel
@@ -69,6 +69,7 @@ go_library(
         "@io_k8s_kubernetes//pkg/features",
         "@io_k8s_kubernetes//plugin/pkg/admission/security/podsecurity",
         "@io_k8s_pod_security_admission//admission/api/v1:api",
+        "@io_k8s_utils//ptr",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
