workspace: introduce bazel downloader config and replace bazeldnf mirror
This rather small change does rework the way we cache our dependencies
by instructing bazel to fetch everything through a custom proxy. See
//build/mirror_proxy:README.me for more infos.

Closes monogon-dev/monogon#178

Change-Id: Ic671fc8233a1cbf37427bbc96339ea8108310e21
Reviewed-on: https://review.monogon.dev/c/monogon/+/3686
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -97,5 +97,7 @@ test --experimental_allow_tags_propagation
 # Assume a 10k IOPS device (average NVMe) and 64GiB of RAM for test scheduling.
 test --local_resources=iops=10000 --local_resources=ram=64000
 
+common --experimental_downloader_config=build/bazel/bazel_downloader.cfg
+
 # Load custom per-user settings.
 try-import %workspace%/.bazelrc.user
