treewide: add race-detector config
This also disables all `pure = "on"` attributes as they propagate too
far and break the race detector because rules_go contradicts itself by
forcing pure go even when CGO is required by the race detector. We build
everything for our node images static and pure via a transition anyway,
so this is actually fine.

Change-Id: I5cd3879fba4258caa94df4dbea5c6472867b7e34
Reviewed-on: https://review.monogon.dev/c/monogon/+/3725
Tested-by: Jenkins CI
Reviewed-by: Hendrik Hofstadt <hendrik@monogon.tech>

--- a/.bazelrc
+++ b/.bazelrc
@@ -87,6 +87,10 @@ build --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_dev
 #     prevent stackoverflows for gvisor
 build:dbg --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,nobtrfs,nozfs,notapestats,norapl,kvm_debug
 
+# Run race config with race detector
+build:race --@io_bazel_rules_go//go/config:race
+build:race --@io_bazel_rules_go//go/config:tags=selinux,seccomp,no_zfs,no_aufs,no_devicemapper,providerless,dockerless,nowasm,netgo,osusergo,nobtrfs,nozfs,notapestats,norapl,race
+
 # Build with C++17.
 build --cxxopt=-std=c++17
 
