--- a/osbase/blockdev/BUILD.bazel
+++ b/osbase/blockdev/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "blockdev.go",
         "blockdev_darwin.go",
         "blockdev_linux.go",
+        "blockdev_windows.go",
         "memory.go",
     ],
     importpath = "source.monogon.dev/osbase/blockdev",
@@ -23,6 +24,9 @@ go_library(
         ],
         "@io_bazel_rules_go//go/platform:linux": [
             "@org_golang_x_sys//unix",
+        ],
+        "@io_bazel_rules_go//go/platform:windows": [
+            "@org_golang_x_sys//windows",
         ],
         "//conditions:default": [],
     }),
