m/node: remove non-definition dependencies
This enables usage from arbitrary platforms without including lots of
dependencies that aren't related to functionality.

Change-Id: I33e16b5396dc7216b676b294b8c1752caf3551b3
Reviewed-on: https://review.monogon.dev/c/monogon/+/3697
Tested-by: Jenkins CI
Vouch-Run-CI: Lorenz Brun <lorenz@monogon.tech>
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>

--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -19,10 +19,7 @@ go_library(
         "//metropolis:__subpackages__",
         "@io_k8s_kubernetes//pkg/registry:__subpackages__",
     ],
-    deps = [
-        "//metropolis/proto/common",
-        "@com_github_vishvananda_netlink//:netlink",
-    ],
+    deps = ["//metropolis/proto/common"],
 )
 
 # debug_build checks if we're building in debug mode and enables various debug features for the image.
