osbase/bringup: Add panichandler and pstore handling
This expands bringup to use cgroups,
adds our panichandler and
implements a redirect of stdout and stderr.
The last one for intercepting using it with the race detector or
third party code which uses said outputs.
By adding RunWith it is now possible to add metrics collection and
LogTree filtering.

Change-Id: I9795d7b1d7f66cc67003dbaee0aadf134ebdba65
Reviewed-on: https://review.monogon.dev/c/monogon/+/3705
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI
Reviewed-by: Jan Schär <jan@monogon.tech>

--- a/osbase/bringup/BUILD.bazel
+++ b/osbase/bringup/BUILD.bazel
@@ -2,14 +2,21 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "bringup",
-    srcs = ["bringup.go"],
+    srcs = [
+        "bringup.go",
+        "panichandler.go",
+        "pstore.go",
+    ],
     importpath = "source.monogon.dev/osbase/bringup",
     visibility = ["//visibility:public"],
     deps = [
+        "//go/logging",
         "//osbase/bootparam",
         "//osbase/efivarfs",
         "//osbase/logtree",
+        "//osbase/pstore",
         "//osbase/supervisor",
+        "@com_github_opencontainers_runc//libcontainer/cgroups",
         "@org_golang_x_sys//unix",
         "@org_uber_go_multierr//:multierr",
     ],
