metropolis/node/core: migrate main to osbase/bringup
This migrates our existing startup code to use our bringup library

Change-Id: Ic78c80bc4631fa2a67cd6a3db1ea19642b20aea9
Reviewed-on: https://review.monogon.dev/c/monogon/+/3706
Tested-by: Jenkins CI
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Reviewed-by: Jan Schär <jan@monogon.tech>

--- a/metropolis/node/core/BUILD.bazel
+++ b/metropolis/node/core/BUILD.bazel
@@ -7,8 +7,6 @@ go_library(
         "main.go",
         "mounts.go",
         "nodeparams.go",
-        "panichandler.go",
-        "pstore.go",
         "sysctl.go",
     ] + select({
         "//metropolis/node:debug_build": [
@@ -39,9 +37,9 @@ go_library(
         "//metropolis/node/core/update",
         "//metropolis/proto/api",
         "//metropolis/version",
+        "//osbase/bringup",
         "//osbase/logtree",
         "//osbase/net/dns",
-        "//osbase/pstore",
         "//osbase/supervisor",
         "//osbase/sysctl",
         "//osbase/tpm",
