o/t/ktest: switch to proper rule
This was previously implemented as a macro, lacking proper transitions.
Reimplement it as a proper test rule.

Change-Id: I237a2fcc29ea6dfbb294ce6313c9ff457def12b8
Reviewed-on: https://review.monogon.dev/c/monogon/+/3722
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/test/lacp/BUILD.bazel
+++ b/metropolis/test/lacp/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_test")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_test(
     name = "lacptest_test",
@@ -10,7 +10,8 @@ go_test(
     ],
 )
 
-ktest(
+k_test(
+    name = "ktest",
     tester = ":lacptest_test",
 )
 
