--- a/go/net/psample/BUILD.bazel
+++ b/go/net/psample/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_library(
     name = "psample",
@@ -24,6 +24,7 @@ go_test(
     ],
 )
 
-ktest(
+k_test(
+    name = "ktest",
     tester = ":psample_test",
 )
