--- a/metropolis/node/core/clusternet/BUILD.bazel
+++ b/metropolis/node/core/clusternet/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_library(
     name = "clusternet",
@@ -45,7 +45,8 @@ go_test(
     ],
 )
 
-ktest(
+k_test(
+    name = "ktest",
     cmdline = "ramdisk_size=128",
     tester = ":clusternet_test",
 )
