--- a/metropolis/node/core/localstorage/crypt/BUILD.bazel
+++ b/metropolis/node/core/localstorage/crypt/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_library(
     name = "crypt",
@@ -31,7 +31,8 @@ go_test(
     embed = [":crypt"],
 )
 
-ktest(
+k_test(
+    name = "ktest",
     cmdline = "ramdisk_size=4096",
     tester = ":crypt_test",
 )
