--- a/osbase/blockdev/BUILD.bazel
+++ b/osbase/blockdev/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_library(
     name = "blockdev",
@@ -50,6 +50,7 @@ go_test(
     }),
 )
 
-ktest(
+k_test(
+    name = "ktest",
     tester = ":blockdev_test",
 )
