--- a/osbase/fsquota/BUILD.bazel
+++ b/osbase/fsquota/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_library(
     name = "fsquota",
@@ -23,7 +23,8 @@ go_test(
     ],
 )
 
-ktest(
+k_test(
+    name = "ktest",
     cmdline = "ramdisk_size=51200",
     files_cc = {
         "@xfsprogs//:mkfs": "/mkfs.xfs",
