--- a/osbase/kmod/BUILD.bazel
+++ b/osbase/kmod/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 load("//osbase/build/fwprune:def.bzl", "fsspec_linux_firmware")
-load("//osbase/test/ktest:ktest.bzl", "ktest")
+load("//osbase/test/ktest:ktest.bzl", "k_test")
 
 go_library(
     name = "kmod",
@@ -41,7 +41,8 @@ fsspec_linux_firmware(
     metadata = "@linux-firmware//:metadata",
 )
 
-ktest(
+k_test(
+    name = "ktest",
     fsspecs = [
         ":firmware",
     ],
