--- a/metropolis/cli/takeover/BUILD.bazel
+++ b/metropolis/cli/takeover/BUILD.bazel
@@ -59,6 +59,6 @@ go_binary(
 platform_transition_binary(
     name = "takeover",
     binary = ":takeover_bin",
-    target_platform = "//build/platforms:linux_amd64_static",
+    target_platform = "//build/platforms:linux_arm64_static",
     visibility = ["//visibility:public"],
 )
