--- a/osbase/bringup/test/BUILD.bazel
+++ b/osbase/bringup/test/BUILD.bazel
@@ -9,14 +9,14 @@ go_test(
     data = [
         ":kernel_failed",
         ":kernel_succeeded",
-        "//third_party/edk2:OVMF_CODE.fd",
-        "//third_party/edk2:OVMF_VARS.fd",
+        "//third_party/edk2:QEMU_EFI.fd",
+        "//third_party/edk2:QEMU_VARS.fd",
     ],
     importpath = "source.monogon.dev/metropolis/installer/test",
     visibility = ["//visibility:private"],
     x_defs = {
-        "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:OVMF_VARS.fd )",
-        "xOvmfCodePath": "$(rlocationpath //third_party/edk2:OVMF_CODE.fd )",
+        "xOvmfVarsPath": "$(rlocationpath //third_party/edk2:QEMU_VARS.fd )",
+        "xOvmfCodePath": "$(rlocationpath //third_party/edk2:QEMU_EFI.fd )",
         "xSucceedKernelPath": "$(rlocationpath :kernel_succeeded )",
         "xFailedKernelPath": "$(rlocationpath :kernel_failed )",
     },
