--- a/metropolis/test/e2e/persistentvolume/BUILD.bazel
+++ b/metropolis/test/e2e/persistentvolume/BUILD.bazel
@@ -23,7 +23,7 @@ load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
 platform_transition_binary(
     name = "persistentvolume_transitioned",
     binary = ":persistentvolume",
-    target_platform = "//build/platforms:linux_amd64_static",
+    target_platform = "//build/platforms:linux_arm64_static",
     visibility = ["//visibility:private"],
 )
 
