treewide: replace build/proto_docs with rules_proto_grpc_doc
In a future commit we will use other modules from rules_proto_grpc,
which allows us to remove this custom rule

Change-Id: I00a823de8fb8eb1e3beb5bf2f516d2c92dabc5a0
Reviewed-on: https://review.monogon.dev/c/monogon/+/3746
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/metropolis/proto/BUILD.bazel
+++ b/metropolis/proto/BUILD.bazel
@@ -1,6 +1,6 @@
-load("//build/proto_docs:proto_docs.bzl", "proto_docs")
+load("@rules_proto_grpc_doc//:defs.bzl", "doc_html_compile")
 
-proto_docs(
+doc_html_compile(
     name = "docs",
     protos = [
         "//metropolis/proto/api:api_proto",
