metropolis/proto: Add protobuf linting
This adds linting for our proto definitions. All failing linter rules
are currently disabled and will be enabled/fixed in a future commit.

Closes monogon-dev/monogon#7

Change-Id: Ifb9531511f0bc2a0b740722a493d7c3bf8d6d19c
Reviewed-on: https://review.monogon.dev/c/monogon/+/3747
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -66,6 +66,7 @@ bazel_dep(name = "rules_python", version = "0.36.0")
 bazel_dep(name = "rules_cc", version = "0.0.10")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "rules_proto_grpc_doc", version = "5.0.1")
+bazel_dep(name = "rules_proto_grpc_buf", version = "5.0.1")
 
 # Currently supported version are listed here:
 # https://protobuf.dev/support/version-support/
