--- a/metropolis/node/kubernetes/pause/BUILD.bazel
+++ b/metropolis/node/kubernetes/pause/BUILD.bazel
@@ -1,3 +1,6 @@
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
+
 cc_binary(
     name = "pause",
     srcs = [
@@ -8,29 +11,16 @@ cc_binary(
     ],
 )
 
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
-
-platform_transition_binary(
-    name = "pause_transitioned",
-    binary = ":pause",
-    target_platform = "//build/platforms:linux_amd64_static",
-    visibility = ["//visibility:private"],
-)
-
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
-
-pkg_tar(
+static_binary_tarball(
     name = "pause_layer",
-    srcs = [":pause_transitioned"],
+    executable = ":pause",
     visibility = ["//visibility:private"],
 )
-
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
 
 oci_image(
     name = "pause_image",
     architecture = "amd64",
-    entrypoint = ["/pause"],
+    entrypoint = ["/app/metropolis/node/kubernetes/pause/pause"],
     os = "linux",
     tars = [":pause_layer"],
     visibility = ["//visibility:public"],
