--- a/metropolis/test/e2e/httpserver/BUILD.bazel
+++ b/metropolis/test/e2e/httpserver/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
+load("@rules_oci//oci:defs.bzl", "oci_image")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
 
 go_library(
     name = "httpserver_lib",
@@ -15,27 +16,16 @@ go_binary(
     visibility = ["//visibility:private"],
 )
 
-platform_transition_binary(
-    name = "httpserver_transitioned",
-    binary = ":httpserver",
-    target_platform = "//build/platforms:linux_amd64_static",
-    visibility = ["//visibility:private"],
-)
-
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
-
-pkg_tar(
+static_binary_tarball(
     name = "httpserver_layer",
-    srcs = [":httpserver_transitioned"],
+    executable = ":httpserver",
     visibility = ["//visibility:private"],
 )
-
-load("@rules_oci//oci:defs.bzl", "oci_image")
 
 oci_image(
     name = "httpserver_image",
     base = "@distroless_base",
-    entrypoint = ["/httpserver"],
+    entrypoint = ["/app/metropolis/test/e2e/httpserver/httpserver_/httpserver"],
     tars = [":httpserver_layer"],
     visibility = ["//metropolis/test/e2e:__pkg__"],
     workdir = "/app",
