--- a/metropolis/test/e2e/persistentvolume/BUILD.bazel
+++ b/metropolis/test/e2e/persistentvolume/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@rules_oci//oci:defs.bzl", "oci_image")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
 
 go_library(
     name = "persistentvolume_lib",
@@ -18,29 +20,16 @@ go_binary(
     visibility = ["//visibility:private"],
 )
 
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
-
-platform_transition_binary(
-    name = "persistentvolume_transitioned",
-    binary = ":persistentvolume",
-    target_platform = "//build/platforms:linux_amd64_static",
-    visibility = ["//visibility:private"],
-)
-
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
-
-pkg_tar(
+static_binary_tarball(
     name = "persistentvolume_layer",
-    srcs = [":persistentvolume_transitioned"],
+    executable = ":persistentvolume",
     visibility = ["//visibility:private"],
 )
-
-load("@rules_oci//oci:defs.bzl", "oci_image")
 
 oci_image(
     name = "persistentvolume_image",
     base = "@distroless_base",
-    entrypoint = ["/persistentvolume"],
+    entrypoint = ["/app/metropolis/test/e2e/persistentvolume/persistentvolume_/persistentvolume"],
     tars = [":persistentvolume_layer"],
     visibility = ["//metropolis/test/e2e:__pkg__"],
     workdir = "/app",
