--- a/metropolis/test/e2e/preseedtest/BUILD.bazel
+++ b/metropolis/test/e2e/preseedtest/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
 
 go_library(
     name = "preseedtest_lib",
@@ -14,29 +16,16 @@ go_binary(
     visibility = ["//visibility:private"],
 )
 
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
-
-platform_transition_binary(
-    name = "preseedtest_transitioned",
-    binary = ":preseedtest",
-    target_platform = "//build/platforms:linux_amd64_static",
-    visibility = ["//visibility:private"],
-)
-
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
-
-pkg_tar(
+static_binary_tarball(
     name = "preseedtest_layer",
-    srcs = [":preseedtest_transitioned"],
+    executable = ":preseedtest",
     visibility = ["//visibility:private"],
 )
-
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
 
 oci_image(
     name = "preseedtest_image",
     base = "@distroless_base",
-    entrypoint = ["/preseedtest"],
+    entrypoint = ["/app/metropolis/test/e2e/preseedtest/preseedtest_/preseedtest"],
     tars = [":preseedtest_layer"],
     visibility = ["//visibility:private"],
     workdir = "/app",
