--- a/metropolis/test/e2e/selftest/BUILD.bazel
+++ b/metropolis/test/e2e/selftest/BUILD.bazel
@@ -1,4 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@rules_oci//oci:defs.bzl", "oci_image")
+load("//build/static_binary_tarball:def.bzl", "static_binary_tarball")
 
 go_library(
     name = "selftest_lib",
@@ -14,29 +16,16 @@ go_binary(
     visibility = ["//visibility:private"],
 )
 
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_binary")
-
-platform_transition_binary(
-    name = "selftest_transitioned",
-    binary = ":selftest",
-    target_platform = "//build/platforms:linux_amd64_static",
-    visibility = ["//visibility:private"],
-)
-
-load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
-
-pkg_tar(
+static_binary_tarball(
     name = "selftest_layer",
-    srcs = [":selftest_transitioned"],
+    executable = ":selftest",
     visibility = ["//visibility:private"],
 )
-
-load("@rules_oci//oci:defs.bzl", "oci_image")
 
 oci_image(
     name = "selftest_image",
     base = "@distroless_base",
-    entrypoint = ["/selftest"],
+    entrypoint = ["/app/metropolis/test/e2e/selftest/selftest_/selftest"],
     tars = [":selftest_layer"],
     visibility = ["//metropolis/test/e2e:__pkg__"],
     workdir = "/app",
